--- a/searchbargoodWP/src/index.html
+++ b/searchbargoodWP/src/index.html
@@ -10,5 +10,13 @@
 </head>
 <body>
   <app-searchbargood-spfx-web-part description="Hello world!"></app-searchbargood-spfx-web-part>
+  <script>
+    var global = global || window;
+    var Buffer = Buffer || [];
+    var process = process || {
+      env: { DEBUG: undefined },
+      version: []
+    };
+  </script>
 </body>
 </html>
